Fixes additional spacing issues with names in profile viewer and sidebar:
- Character list names are always affixed to left of icon
- Sidebar name has enough space for long letters, while not taking up unneeded horizontal padding

--- a/scss/_chat.scss
+++ b/scss/_chat.scss
@@ -232,7 +232,7 @@
 .sidebarUserInfo-user {
   max-width: 70%;
   overflow-x: hidden;
-  padding: 2px 5px 6px 5px;
+  padding: 0px 5px 6px 5px;
   border-radius: 8px;
   transition: 0.2s;
   &:hover,
